welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:7: error: reassignment to val
		case (die1, noDoubles, die2)  if (noDoubles==true && die1==die2 && die1==6) => return die1=1
                                                                                                          ^